--- a/Part_2/index.html
+++ b/Part_2/index.html
@@ -19,38 +19,83 @@
         </p>
         <div class="row filters text-center">
             <div class="col">
-                <button class="active" type="button">
+                <button class="filter active" type="button" id="all">
                     <span>all</span>
                 </button>
             </div>
             <div class="col">
-                <button type="button">
+                <button class="filter" type="button" id="design">
                     <span>design</span>
                 </button>
             </div>
             <div class="col">
-                <button type="button">
+                <button class="filter" type="button" id="code">
                     <span>code</span>
                 </button>
             </div>
             <div class="col">
-                <button type="button">
+                <button class="filter" type="button" id="photography">
                     <span>photography</span>
                 </button>
             </div>
             <div class="col">
-                <button type="button">
-                    <span>apss</span>
+                <button class="filter" type="button" id="apps">
+                    <span>apps</span>
                 </button>
             </div>
         </div>
         <div class="row presentation">
-            <div class="col col--first">
+            <div class="col col--first position-relative col--all col--design">
                 <img src="assets/5_portfolio/lamp.png" alt="lamp">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>super awesome work</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div>
+            </div>
+            <div class="col col--first position-relative col--code">
+                <img src="assets/5_portfolio/lamp.png" alt="lamp">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>code</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div>
+            </div>
+            <div class="col col--first position-relative col--photography">
+                <img src="assets/5_portfolio/lamp.png" alt="lamp">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>photography</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div>
+            </div>
+            <div class="col col--first position-relative col--apps">
+                <img src="assets/5_portfolio/lamp.png" alt="lamp">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>apps</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div>
             </div>
             <div class="col">
                 <div class="row">
-                    <div class="col position-relative">
+                    <div class="col position-relative col--image col--design col--all">
                         <img src="assets/5_portfolio/book.png" alt="book">
                         <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
                             <h3>super awesome work</h3>
@@ -62,19 +107,127 @@
                             <button>view more</button>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col position-relative col--image col--code ">
+                        <img src="assets/5_portfolio/book.png" alt="book">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>code</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
+                    </div>
+                    <div class="col position-relative col--image col--photography ">
+                        <img src="assets/5_portfolio/book.png" alt="book">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>photography</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
+                    </div>
+                    <div class="col position-relative col--image col--apps ">
+                        <img src="assets/5_portfolio/book.png" alt="book">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>apps</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
+                    </div>
+                    <div class="col position-relative col--image col--design col--all">
                         <img src="assets/5_portfolio/boxes.png" alt="boxes">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>super awesome work</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
+                    </div>
+                    <div class="col position-relative col--image col--code">
+                        <img src="assets/5_portfolio/boxes.png" alt="boxes">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>code</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
+                    </div>
+                    <div class="col position-relative col--image col--photography">
+                        <img src="assets/5_portfolio/boxes.png" alt="boxes">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>photography</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
+                    </div>
+                    <div class="col position-relative col--image col--apps">
+                        <img src="assets/5_portfolio/boxes.png" alt="boxes">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>apps</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col position-relative col--image">
                         <img src="assets/5_portfolio/box.png" alt="box">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>super awesome work</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
                     </div>
-                    <div class="col">
+                    <div class="col position-relative col--image">
                         <img src="assets/5_portfolio/man.png" alt="man">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>super awesome work</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
                     </div>
-                    <div class="col">
+                    <div class="col position-relative col--image">
                         <img src="assets/5_portfolio/fan.png" alt="fan">
+                        <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                            <h3>super awesome work</h3>
+                            <p>
+                                Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                                consectetur sed, convallis at tellus. Praesent sapien massa
+                                convallis a pellentesque necestas.
+                            </p>
+                            <button>view more</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -99,7 +252,7 @@
                     <a href="#">see project</a>
                 </div>
                 <div class="col green">
-                    <h3>interactive elements</h3>
+                    <h3>custom menus</h3>
                     <p>
                         Class aptent taciti estied aliquam ellus pers 
                         piciat unde omnis dolorem dantium.
@@ -107,7 +260,7 @@
                     <a href="#">see project</a>
                 </div>
                 <div class="col purple">
-                    <h3>interactive elements</h3>
+                    <h3>animated counters</h3>
                     <p>
                         Class aptent taciti estied aliquam ellus pers 
                         piciat unde omnis dolorem dantium.
@@ -117,7 +270,7 @@
             </div>
             <div class="row m-auto justify-content-between">
                 <div class="col blue">
-                    <h3>interactive elements</h3>
+                    <h3>eazy to customize</h3>
                     <p>
                         Class aptent taciti estied aliquam ellus pers 
                         piciat unde omnis dolorem dantium.
@@ -125,7 +278,7 @@
                     <a href="#">see project</a>
                 </div>
                 <div class="col yellow">
-                    <h3>interactive elements</h3>
+                    <h3>online store</h3>
                     <p>
                         Class aptent taciti estied aliquam ellus pers 
                         piciat unde omnis dolorem dantium.
@@ -133,7 +286,7 @@
                     <a href="#">see project</a>
                 </div>
                 <div class="col sky">
-                    <h3>interactive elements</h3>
+                    <h3>custom pages</h3>
                     <p>
                         Class aptent taciti estied aliquam ellus pers 
                         piciat unde omnis dolorem dantium.
@@ -302,14 +455,14 @@
             The first requirement for an user experience is to meet the
             exact needs of the customer.
         </p>
-        <div class="row row-email">
+        <form class="row row-email" id="email-form">
             <div class="col">
-                <input type="text" placeholder="Your Mail">
+                <input type="email" placeholder="Your Mail" name="email" autocomplete="email" data-parsley-maxlength="225">
             </div>
             <div class="col">
-                <button type="submit">send</button>
+                <button type="submit" id="btn-send-email">send</button>
             </div>
-        </div>
+        </form>
     </section>
 
     <footer class="text-center">
@@ -338,11 +491,9 @@
         </div>   
     </footer>
 
-
-
-
-
-
+    <script src="js/jquery.js"></script>
+    <script src="js/parsley.min.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
