change content in mosaik

--- a/Part_2/index.html
+++ b/Part_2/index.html
@@ -212,30 +212,6 @@
                 </div>
             </div>
             <div class="position-relative">
-                <img src="assets/5_portfolio/fan.png" alt="">
-                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
-                    <h3>design</h3>
-                    <p>
-                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
-                        consectetur sed, convallis at tellus. Praesent sapien massa
-                        convallis a pellentesque necestas.
-                    </p>
-                    <button>view more</button>
-                </div> 
-            </div>
-            <div class="position-relative">
-                <img src="assets/5_portfolio/lamp.png" alt="">
-                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
-                    <h3>super awesome work</h3>
-                    <p>
-                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
-                        consectetur sed, convallis at tellus. Praesent sapien massa
-                        convallis a pellentesque necestas.
-                    </p>
-                    <button>view more</button>
-                </div>
-            </div>
-            <div class="position-relative">
                 <img src="assets/5_portfolio/book.png" alt="book">
                 <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
                     <h3>code</h3>
@@ -271,21 +247,6 @@
                     <button>view more</button>
                 </div>
             </div>
-        </div>
-
-        <div class="mosaic col--photography" id="myMosaicPhotography">
-            <div class="position-relative">
-                <img src="assets/5_portfolio/man.png" alt="">
-                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
-                    <h3>apps</h3>
-                    <p>
-                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
-                        consectetur sed, convallis at tellus. Praesent sapien massa
-                        convallis a pellentesque necestas.
-                    </p>
-                    <button>view more</button>
-                </div>
-            </div>
             <div class="position-relative">
                 <img src="assets/5_portfolio/fan.png" alt="">
                 <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
@@ -310,6 +271,33 @@
                     <button>view more</button>
                 </div>
             </div>
+        </div>
+
+        <div class="mosaic col--photography" id="myMosaicPhotography">
+            <div class="position-relative">
+                <img src="assets/5_portfolio/fan.png" alt="">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>design</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div> 
+            </div>
+            <div class="position-relative">
+                <img src="assets/5_portfolio/boxes.png" alt="boxes">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>photography</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div>  
+            </div>
             <div class="position-relative">
                 <img src="assets/5_portfolio/book.png" alt="book">
                 <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
@@ -323,16 +311,28 @@
                 </div>
             </div>
             <div class="position-relative">
-                <img src="assets/5_portfolio/boxes.png" alt="boxes">
+                <img src="assets/5_portfolio/man.png" alt="">
                 <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
-                    <h3>photography</h3>
+                    <h3>apps</h3>
                     <p>
                         Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
                         consectetur sed, convallis at tellus. Praesent sapien massa
                         convallis a pellentesque necestas.
                     </p>
                     <button>view more</button>
-                </div>  
+                </div>
+            </div>
+            <div class="position-relative">
+                <img src="assets/5_portfolio/lamp.png" alt="">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>super awesome work</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div>
             </div>
             <div class="position-relative">
                 <img src="assets/5_portfolio/box.png" alt="box">
@@ -353,6 +353,18 @@
                 <img src="assets/5_portfolio/man.png" alt="">
                 <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
                     <h3>apps</h3>
+                    <p>
+                        Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
+                        consectetur sed, convallis at tellus. Praesent sapien massa
+                        convallis a pellentesque necestas.
+                    </p>
+                    <button>view more</button>
+                </div>
+            </div>
+            <div class="position-relative">
+                <img src="assets/5_portfolio/book.png" alt="book">
+                <div class="presentation-hover-box position-absolute top-0 start-0 text-left">
+                    <h3>code</h3>
                     <p>
                         Congue leo eget malesuada. Vivamus magna justo, lacinia eget 
                         consectetur sed, convallis at tellus. Praesent sapien massa
